force-app/main/default/objects/ImportAssets__c/ImportAssets__c.object-meta.xml
<CustomObject>
    <label>Import Assets</label>
    <nameField>
        <displayFormat>Asset {00000}</displayFormat>
        <label>Import Assets No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>