force-app/main/default/objects/ImportAssets__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Import Assets</relationshipLabel>
    <relationshipName>Import_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>