force-app/main/default/objects/ImportAssets__c/fields/AssetID__c.field-meta.xml
<CustomField>
    <fullName>AssetID__c</fullName>
    <formula>CASESAFEID(Asset__r.Id)</formula>
    <label>AssetID</label>
    <type>Text</type>
</CustomField>