force-app/main/default/objects/ImportAssets__c/fields/ErrorDetail__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetail__c</fullName>
    <label>Error Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>