force-app/main/default/objects/ImportAssets__c/fields/ExternalCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCustomerId__c</fullName>
    <label>External Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>