force-app/main/default/objects/ImportAssets__c/fields/GoverningBody__c.field-meta.xml
<CustomField>
    <fullName>GoverningBody__c</fullName>
    <label>Governing Body (bill to)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>