force-app/main/default/objects/ImportAssets__c/fields/Hfdstructuur__c.field-meta.xml
<CustomField>
    <fullName>Hfdstructuur__c</fullName>
    <label>Hfdstructuur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>