force-app/main/default/objects/ImportAssets__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <label>Licence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>