force-app/main/default/objects/ImportAssets__c/fields/ManualOrderRequired__c.field-meta.xml
<CustomField>
    <fullName>ManualOrderRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Order Required</label>
    <type>Checkbox</type>
</CustomField>