force-app/main/default/objects/ImportAssets__c/fields/QuantityEndDate__c.field-meta.xml
<CustomField>
    <fullName>QuantityEndDate__c</fullName>
    <label>Quantity End Date</label>
    <type>Date</type>
</CustomField>