force-app/main/default/objects/ImportAssets__c/fields/SchoolGroup__c.field-meta.xml
<CustomField>
    <fullName>SchoolGroup__c</fullName>
    <label>School Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>