force-app/main/default/objects/ImportAssets__c/fields/ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Import Assets</relationshipLabel>
    <relationshipName>Import_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>