force-app/main/default/objects/ImportAssets__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Informat</fullName>
            </value>
            <value>
                <fullName>Liber</fullName>
            </value>
            <value>
                <fullName>Noordhoff</fullName>
            </value>
            <value>
                <fullName>Noordhoff Professional</fullName>
            </value>
            <value>
                <fullName>Plantyn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>