force-app/main/default/objects/ImportAssets__c/fields/Wasnotinimport__c.field-meta.xml
<CustomField>
    <fullName>Wasnotinimport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was not in import</label>
    <type>Checkbox</type>
</CustomField>